--- a/hexlet_code/page_analyzer/templates/index.html
+++ b/hexlet_code/page_analyzer/templates/index.html
@@ -1,59 +1,25 @@
-<!DOCTYPE html>
-<html lang="ru">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Анализатор страниц</title>
-    <!-- Подключение Bootstrap CSS через CDN -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" 
-          integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" 
-          crossorigin="anonymous">
-</head>
-<body class="d-flex flex-column min-vh-100">
-    <header class="flex-shrink-0">
-        <nav class="navbar navbar-expand-md navbar-dark bg-dark px-3">
-            <a class="navbar-brand" href="/">Анализатор страниц</a>
-            <div id="navbarNav">
-                <ul class="navbar-nav">
-                    <li class="nav-item"><a class="nav-link" href="/urls">Сайты</a></li>
-                </ul>
-            </div>
-        </nav>
-    </header>
+{% extends "base.html" %}
 
-    <main class="flex-grow-1">
-        <div class="container-lg mt-3">
-            <h1>Анализатор страниц</h1>
+{% block title %}Анализатор страниц{% endblock %}
+
+{% block content %}
+<div class="container-lg mt-3">
+    <div class="row">
+        <div class="col-12 col-md-10 col-lg-8 mx-auto border rounded-3 bg-light p-5">
+            <h1 class="display-3">Анализатор страниц</h1>
             <p class="lead">Бесплатно проверяйте сайты на SEO пригодность</p>
-            <form action="/urls" method="post">
-                <div class="row">
-                    <div class="col-8">
-                        <input type="text" 
-                               name="url" 
-                               placeholder="https://www.example.com" 
-                               class="form-control form-control-lg"
-                               required>
-                    </div>
-                    <div class="col-2">
-                        <button type="submit" 
-                                class="btn btn-primary btn-lg ms-3 px-5 text-uppercase mx-3">
-                            Проверить
-                        </button>
-                    </div>
-                </div>
+            <form action="/urls" method="post" class="d-flex justify-content-center">
+                <input type="text" 
+                       name="url" 
+                       placeholder="https://www.example.com" 
+                       class="form-control form-control-lg" 
+                       value="{{ request.form.url if request.form.url else '' }}"
+                       required>
+                <input type="submit" 
+                       class="btn btn-primary btn-lg ms-3 px-5 text-uppercase mx-3" 
+                       value="Проверить">
             </form>
         </div>
-    </main>
-
-    <footer class="border-top py-3 mt-5 flex-shrink-0">
-        <div class="container-lg text-center">
-            <a href="https://ru.hexlet.io/" target="_blank">Hexlet</a>
-        </div>
-    </footer>
-
-    <!-- Подключение Bootstrap JS -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" 
-            integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" 
-            crossorigin="anonymous"></script>
-</body>
-</html>
+    </div>
+</div>
+{% endblock %}
